--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Notes App",
     "main": "index.js",
     "scripts": {
-        "start": "node src/index.js"
+        "start": "node src/index.js",
         "dev": "nodemon /src"
     },
     "keywords": [],
