--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "nodejs-notes-app",
-    "version": "2.0.0",
-    "description": "Notes App",
-    "main": "index.js",
-    "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon /src"
-    },
+  "name": "nodejs-notes-app",
+  "version": "2.0.0",
+  "description": "Notes App",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
     "keywords": [],
     "author": "",
     "license": "ISC",
